ajustes e novas implementações para menu e restaurantes
